--- a/src/main/resources/interactions/example.yml
+++ b/src/main/resources/interactions/example.yml
@@ -1,5 +1,4 @@
-name: '&a&lExample NPC'
-starts_with: []
+npc_id: []
 block_movement: true
 slow_effect: false
 start_conversation_radius: 0
@@ -7,13 +6,17 @@ end_conversation_radius: 5
 first_conversation: 'conversation1'
 no_requirement_conversation: 'fail'
 npc_name: "<blue>Zeus<gray>:"
+cooldown: 3600
+interrupt_actions:
+  - "message:mission cancelled because you went too far!"
+requirements:
+  - "%level% < 10"
 conversation:
   conversation1:
     dialogue:
-      dialogue1:
-        text:
-          - "&7Hello citizen, what can I do for you?"
-        time: 4
+      text:
+        - "&7Hello citizen, what can I do for you?"
+      delay: 4
     options:
       option1:
         text: "&eTell me about the city."
