--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ repositories {
     maven {
         url "https://maven.devs.beer/"
     }
+    maven {
+        url = "https://repo.fancyinnovations.com/releases"
+    }
+
 }
 
 dependencies {
@@ -31,6 +35,7 @@ dependencies {
     compileOnly "com.github.MilkBowl:VaultAPI:1.7"
     compileOnly("io.th0rgal:oraxen:1.196.0")
     compileOnly("dev.lone:api-itemsadder:4.0.10")
+    compileOnly("de.oliver:FancyNpcs:2.8.1")
 }
 
 tasks {
