--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,3 +1,4 @@
 no_money: "<red>You do not have enough money!"
 already_in_conversation: "<red>You already are in a conversation!"
 no_permission: "<red>You don't have the required permission"
+full_inventory: "<red>Your inventory is full! Dropping item"
